# test_plugin_system

./: .gitignore  CMakeLists.txt  README.md
boost_plugin_system/application/: CMakeLists.txt  main.cc  main.cpp  plugin_util.h  plugins_collector.cc  plugins_collector.h  static_plugin.cc  static_plugin.h
boost_plugin_system/plugin/: CMakeLists.txt  i_plugin.h  plugin.cc  plugin.h
ogre_plugin_system/application/: CMakeLists.txt  application.cc  application.h  dynlib.cc  dynlib.h  dynlib_manager.cc  dynlib_manager.h  main.cc  plugin_manager.cc  plugin_manager.h  singleton.h
ogre_plugin_system/plugin/: CMakeLists.txt  i_plugin.h  i_render_system.h  main.cc  render_plugin.cc  render_plugin.h
poco_plugin_system/application/: CMakeLists.txt  main.cc  static_plugin.cc  static_plugin.h
poco_plugin_system/plugin/: CMakeLists.txt  i_plugin.h  plugin.cc  plugin.h
